change dockerfile name

--- a/api/DockerFile
+++ b/api/DockerFile
@@ -1,5 +1,5 @@
 # Utilise une image legere de python 3.13 comme base 
-FROM python.3.13-slim
+FROM python:3.13-slim
 
 # Definir le repertoire de travail dans le conteneur
 WORKDIR /app
